# intro-good-practices

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pull_request_template.md  pyproject.toml
.github/ISSUE_TEMPLATE/: AI_Instructions.md  Bug.md  Documentation.md  Feature.md  ai-instructions.md  bug.md  documentation.md  feature.md
poetry-demo/: pyproject.toml
src/: main.py
