[project]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "AlejandroThomasOliva",email = "athomaso@emeal.nttdata.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.137.2,<0.138.0)",
    "certifi (>=2026.6.17,<2027.0.0)"
]
license = {text = "Apache-2.0"}

[tool.poetry]
packages = [{include = "poetry_demo", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)"
]
